Fixing the alignment of the title and save buttons on the new opportunity page.

--- a/public/src/css/styles.less
+++ b/public/src/css/styles.less
@@ -39,6 +39,11 @@ h1, h2, h3, h4, h5 {
 	font-family: @font-family;
 }
 
+h2 {
+  color: @navy;
+  font-weight: bold;
+}
+
 a {
   color: @dark-green;
   text-decoration: underline;
@@ -131,9 +136,7 @@ p {
   }
   h2 {
     font-size: 270%;
-    color: @navy;
     margin: 20px 0px;
-    font-weight: bold;
   }
   img {
     float: left;
@@ -298,7 +301,6 @@ p {
   margin: auto;
   line-height: 2.2em;
   h2 {
-    color: @navy;
     font-size: 250%;
     text-align: center;
     margin-bottom: 30px;
@@ -331,11 +333,6 @@ p {
 
 #new .btn {
   margin: 0px;
-}
-
-#list-top h2 {
-  font-weight: bold;
-  color: @navy;
 }
 
 td {
